--- a/video_processing_service/package.json
+++ b/video_processing_service/package.json
@@ -7,7 +7,7 @@
     "start": "ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "server": "node dist/index.js"
+    "serve": "node dist/index.js"
   },
   "author": "",
   "license": "ISC",
